--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
         "bootstrap": "5.1.3",
         "eslint-import-resolver-typescript": "^2.5.0",
         "eslint-plugin-import": "^2.25.3",
+        "extracted-loader": "^1.0.7",
+        "file-loader": "^6.2.0",
+        "ignore-loader": "^0.1.2",
+        "img-loader": "^4.0.0",
         "next": "12.0.3",
+        "next-compose-plugins": "^2.2.1",
+        "next-optimized-images": "^2.6.2",
         "prop-types": "^15.7.2",
         "react": "17.0.2",
         "react-bootstrap": "^2.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "sharp": "^0.29.3",
+        "url-loader": "^4.1.1"
     },
     "devDependencies": {
         "@next/eslint-plugin-next": "^12.0.3",
